added a lot of cables

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -268,7 +268,875 @@
         "pm@foo.com",
         "elec@foo.com"
       ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 1",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 2",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 3",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 4",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 5",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 6",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 7",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 8",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 9",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 10",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 11",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 12",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 13",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 14",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 15",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 16",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 17",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10457",
+      "name": "Cable 18",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 1",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 2",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 3",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 4",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 5",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 6",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 7",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 8",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 9",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 10",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10458",
+      "name": "Cable 11",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 1",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 2",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 3",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 4",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 5",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 6",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 7",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 8",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 9",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 10",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 11",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 12",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10459",
+      "name": "Cable 13",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 1",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 2",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 3",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 4",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 5",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 6",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 7",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 8",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 9",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 10",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 11",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 12",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 13",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 14",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 15",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 16",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 17",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 18",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },{
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 19",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
+    },
+    {
+      "company": "Foo Electrical",
+      "project": "Project 10460",
+      "name": "Cable 20",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
+      ]
     }
+
   ],
   "defaultCablePullIns": [
     {
